add header and footer components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<h2>helo</h2>
+<!-- header -->
+<sc-header></sc-header>
+<!-- output -->
 <router-outlet></router-outlet>
+<!-- footer -->
+<sc-footer></sc-footer>
+
+
