--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,4 +4,10 @@
       <img src="assets/images/logo.png" width="112" height="28">
     </a>
   </div>
+  <div class="navbar-menu">
+    <div class="navbar-start">
+      <a routerLink="/" routerLinkActive="active" class="navbar-item">home</a>
+      <a routerLink="/contact" routerLinkActive="active" class="navbar-item">contact</a>
+    </div>
+  </div>
 </nav>
