--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -9,18 +9,18 @@
 <!-- form -->
 <section class="section">
   <div class="container">
-    <form>
+    <form (ngSubmit)="submitForm()">
       <div class="field">
         <label class="label" for="name">Name</label>
-        <input class="input" type="text" id="name" name="name">
+        <input class="input" type="text" id="name" name="name" [(ngModel)]="name">
       </div>
       <div class="field">
         <label class="label" for="email">Email</label>
-        <input class="input" type="text" id="email" name="email">
+        <input class="input" type="text" id="email" name="email" [(ngModel)]="email">
       </div>
       <div class="field">
         <label class="label" for="message">Message</label>
-        <textarea class="textarea" name="message" id="message" cols="30" rows="10"></textarea>
+        <textarea class="textarea" name="message" id="message" cols="30" rows="10" [(ngModel)]="message"></textarea>
       </div>
       <button class="button is-large is-warning" type="submit">send</button>
     </form>
