--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -9,20 +9,22 @@
 <!-- form -->
 <section class="section">
   <div class="container">
-    <form (ngSubmit)="submitForm()">
+    <form (ngSubmit)="submitForm()" #contactForm="ngForm">
       <div class="field">
         <label class="label" for="name">Name</label>
-        <input class="input" type="text" id="name" name="name" [(ngModel)]="name">
+        <input class="input" type="text" id="name" name="name" [(ngModel)]="name" #inputName="ngModel" required>
+        <div class="help is-error" *ngIf="inputName.invalid && inputName.touched">your name is required</div>
       </div>
       <div class="field">
         <label class="label" for="email">Email</label>
-        <input class="input" type="text" id="email" name="email" [(ngModel)]="email">
+        <input class="input" type="text" id="email" name="email" [(ngModel)]="email" #inputEmail="ngModel"  required>
+        <div class="help is-error" *ngIf="inputEmail.invalid && inputEmail.touched">your email is required</div>
       </div>
       <div class="field">
         <label class="label" for="message">Message</label>
-        <textarea class="textarea" name="message" id="message" cols="30" rows="10" [(ngModel)]="message"></textarea>
+        <textarea class="textarea" name="message" id="message" cols="30" rows="10" [(ngModel)]="message" required></textarea>
       </div>
-      <button class="button is-large is-warning" type="submit">send</button>
+      <button class="button is-large is-warning" type="submit" [disabled]="contactForm.invalid">send</button>
     </form>
   </div>
 </section>
