add some styling

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,9 +5,9 @@
     </a>
   </div>
   <div class="navbar-menu">
-    <div class="navbar-start">
-      <a routerLink="/" routerLinkActive="active" class="navbar-item">home</a>
-      <a routerLink="/contact" routerLinkActive="active" class="navbar-item">contact</a>
+    <div class="navbar-end">
+      <a routerLink="/" routerLinkActive="active" class="navbar-item is-capitalized">home</a>
+      <a routerLink="/contact" routerLinkActive="active" class="navbar-item is-capitalized">contact</a>
     </div>
   </div>
 </nav>
