--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
 <section class="hero is-primary is-bold">
   <div class="hero-body">
     <div class="container">
-      <h1 class="title">contact us</h1>
+      <h1 class="title is-uppercase">contact us</h1>
     </div>
   </div>
 </section>
@@ -11,20 +11,20 @@
   <div class="container">
     <form (ngSubmit)="submitForm()" #contactForm="ngForm">
       <div class="field">
-        <label class="label" for="name">Name</label>
+        <label class="label is-capitalized" for="name">name</label>
         <input class="input" type="text" id="name" name="name" [(ngModel)]="name" #inputName="ngModel" required>
         <div class="help is-error" *ngIf="inputName.invalid && inputName.touched">your name is required</div>
       </div>
       <div class="field">
-        <label class="label" for="email">Email</label>
+        <label class="label is-capitalized" for="email">email</label>
         <input class="input" type="text" id="email" name="email" [(ngModel)]="email" #inputEmail="ngModel"  required>
         <div class="help is-error" *ngIf="inputEmail.invalid && inputEmail.touched">your email is required</div>
       </div>
       <div class="field">
-        <label class="label" for="message">Message</label>
+        <label class="label is-capitalized" for="message">message</label>
         <textarea class="textarea" name="message" id="message" cols="30" rows="10" [(ngModel)]="message" required></textarea>
       </div>
-      <button class="button is-large is-warning" type="submit" [disabled]="contactForm.invalid">send</button>
+      <button class="button is-large is-warning is-capitalized" type="submit" [disabled]="contactForm.invalid">send</button>
     </form>
   </div>
 </section>
