add lazy loading component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,9 @@
   </div>
   <div class="navbar-menu">
     <div class="navbar-end">
-      <a routerLink="/" routerLinkActive="active" class="navbar-item is-capitalized">home</a>
-      <a routerLink="/contact" routerLinkActive="active" class="navbar-item is-capitalized">contact</a>
+      <a routerLink="/" class="navbar-item is-capitalized">home</a>
+      <a routerLink="/contact" class="navbar-item is-capitalized">contact</a>
+      <a routerLink="/users" class="navbar-item is-capitalized">users</a>
     </div>
   </div>
 </nav>
