feature: use user model

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
   <div class="container content has-text-centered">
-    <p class="is-uppercase">scotch test app</p>
+    <p class="is-uppercase">github test app</p>
   </div>
 </footer>
