--- a/src/app/users/user-item/user-item.component.html
+++ b/src/app/users/user-item/user-item.component.html
@@ -1,7 +1,7 @@
 <section class="section">
   <div class="container">
     <div class="card" *ngIf="user">
-      <img [src]="user.avatar_url" alt="user.login">
+      <img [src]="user.avatar_url" [alt]="user.login">
       <h3>{{ user.login }}</h3>
     </div>
   </div>
