--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -1,7 +1,7 @@
 <section class="section">
   <div class="container">
     <div class="columns is-multiline" *ngIf="users">
-      <div class="column is-4" *ngFor="let user of users | async">
+      <div class="column is-4" *ngFor="let user of users">
         <div class="card">
           <div class="card-content">
             <a routerLink="/users/{{ user.login }}">
