--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar is-dark" role="navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="https://bulma.io">
+    <a class="navbar-item" routerLink="/">
       <img src="assets/images/logo.png" width="112" height="28">
     </a>
   </div>
