--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -12,18 +12,29 @@
       <div class="field">
         <label class="label is-capitalized" for="name">name</label>
         <input class="input" type="text" id="name" name="name" formControlName="name">
-        <div class="help is-error" *ngIf="form.get('name').invalid && form.get('name').touched">your name is required
+        <div class="help has-text-danger is-capitalized has-text-weight-bold is-size-6"
+          *ngIf="form.get('name').invalid && form.get('name').touched">
+          your name is
+          required
         </div>
       </div>
       <div class="field">
         <label class="label is-capitalized" for="email">email</label>
         <input class="input" type="text" id="email" name="email" formControlName="email">
-        <div class="help is-error" *ngIf="form.get('email').invalid && form.get('email').touched">your email is required
+        <div class="help has-text-danger is-capitalized has-text-weight-bold is-size-6"
+          *ngIf="form.get('email').invalid && form.get('email').touched">
+          your email is
+          required
         </div>
       </div>
       <div class="field">
         <label class="label is-capitalized" for="message">message</label>
         <textarea class="textarea" name="message" id="message" cols="30" rows="10" formControlName="message"></textarea>
+        <div class="help has-text-danger is-capitalized has-text-weight-bold is-size-6"
+          *ngIf="form.get('message').invalid && form.get('message').touched">
+          your message is
+          required
+        </div>
       </div>
       <button class="button is-large is-warning is-capitalized" type="submit" [disabled]="form.invalid">send</button>
     </form>
